# titanic

./: .gitignore  README.md  pyproject.toml  submission.csv  submission_lgbm.csv  submission_xgb.csv  submission_xgb_tuned.csv  titanic.ipynb  titanic_boosting.ipynb  titanic_gridsearch.ipynb
