[project]
name = "titanic"
version = "0.1.0"
description = "Titanic Data - Basic EDA - Classification (Python)"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.1",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
]
